final commit with updated readme, and API-s